@@ -31,7 +31,7 @@ class dstat_innodb_io(dstat):
                 self.set2['sync'] = l[8]
 
             for name in self.vars:
-                self.val[name] = (self.set2[name] - self.set1[name]) * 1.0 / tick
+                self.val[name] = (self.set2[name] - self.set1[name]) * 1.0 / elapsed
 
             if step == op.delay:
                 self.set1.update(self.set2)
