@@ -35,8 +35,8 @@ class dstat_lustre(dstat):
                 if not l or l[0] != 'write_bytes': continue
                 write = long(l[6])
             self.set2[name] = (read, write)
-            self.val[name] = ( (self.set2[name][0] - self.set1[name][0]) * 1.0 / tick,\
-                               (self.set2[name][1] - self.set1[name][1]) * 1.0 / tick ) 
+            self.val[name] = ( (self.set2[name][0] - self.set1[name][0]) * 1.0 / elapsed,
+                               (self.set2[name][1] - self.set1[name][1]) * 1.0 / elapsed )
             if step == op.delay:
                 self.set1.update(self.set2)
 
