@@ -34,7 +34,7 @@ class dstat_mysql5_keys(dstat):
                     self.set2[line[0]] = float(line[1])
 
             for name in self.vars:
-                self.val[name] = self.set2[name] * 1.0 / tick
+                self.val[name] = self.set2[name] * 1.0 / elapsed
 
             if step == op.delay:
                 self.set1.update(self.set2)
