@@ -15,7 +15,7 @@ class dstat_nfs3op(dstat):
             for i, name in enumerate(self.vars):
                 self.set2[name] = long(l[i+2])
         for name in self.vars:
-            self.val[name] = (self.set2[name] - self.set1[name]) * 1.0 / tick
+            self.val[name] = (self.set2[name] - self.set1[name]) * 1.0 / elapsed
         if step == op.delay:
             self.set1.update(self.set2)
 
